# batch-llm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  OPTIONAL_DEPENDENCIES.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: test.yml
docs/: API.md  GEMINI_INTEGRATION.md  MIGRATION_V3.md
examples/: README.md  __init__.py  example.py  example_anthropic.py  example_context_manager.py  example_gemini_direct.py  example_gemini_smart_retry.py  example_langchain.py  example_llm_strategies.py  example_model_escalation.py  example_openai.py  example_smart_model_escalation.py
src/batch_llm/: __init__.py  base.py  llm_strategies.py  parallel.py
src/batch_llm/classifiers/: __init__.py  gemini.py
src/batch_llm/core/: __init__.py  config.py  protocols.py
src/batch_llm/middleware/: __init__.py  base.py
src/batch_llm/observers/: __init__.py  base.py  metrics.py
src/batch_llm/strategies/: __init__.py  errors.py  rate_limit.py
src/batch_llm/testing/: __init__.py  mocks.py  strategies.py
tests/: __init__.py  test_basic.py  test_concurrency.py  test_edge_cases.py  test_llm_strategies.py  test_middleware_observers.py  test_retry_logic.py  test_work_item_modes.py
